tests/negative/gold/compound_type_test.gold
tests/negative/compound_type_test.toit:8:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/compound_type_test.toit:7:14: error: Type mismatch. Expected 'int'. Got 'string'
  list["str".copy 1]++
             ^~~~
tests/negative/compound_type_test.toit:7:14: error: Type mismatch. Expected 'int'. Got 'string'
  list["str".copy 1]++
             ^~~~
Compilation failed.
